02-redis-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  lables:
    app: owncloud
spec:
  containers:
  - name: redis
    image: webhippie/redis:latest
